package es.artyhub.banco_back.domain.enums;

public enum OrigenMovimiento {
    TRANSFERENCIA,
    DOMICILIACION,
    TARJETABANCARIA
}
