package es.artyhub.banco_back.domain.enums;

public enum TipoMovimiento {
    DEBE, //Quitar dinero
    HABER //Añadir dinero
}
