@startuml

title Diagrama UML - Bank Backend

class Cliente {
    - id : Long
    - login : String
    - password : String
    - name : String
    - lastName1 : String
    - lastName2 : String
    - dni : String
    - api_token : String
}

class Cuenta {
    - id : Long
    - saldo : BigDecimal
    - iban : String
}

class MovimientoBancario {
    - id : Long
    - tipoMovimiento : TipoMovimiento
    - origenMovimiento : OrigenMovimiento
    - tarjetaCredito : TarjetaCredito
    - fecha : Date
    - importe : BigDecimal
    - concepto : String
}

class TarjetaCredito {
    - id : Long
    - numeroTarjeta : BigInteger
    - fechaCaducidad : Date
    - cvv : String
    - nombreCompleto : String
}

enum TipoMovimiento {
    DEBE
    HABER
}

enum OrigenMovimiento {
    TRANSFERENCIA
    DOMICILIACION
    TARJETABANCARIA
}

Cliente -- "*" Cuenta

Cuenta -- "*" MovimientoBancario
Cuenta -- "*" TarjetaCredito

@enduml